// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders table container 1`] = `
<TableComponent
  array={Array []}
  hasMore={true}
  isError={false}
  loadFunc={[Function]}
/>
`;

exports[`table change config is isError 1`] = `
<TableComponent
  array={Array []}
  hasMore={true}
  isError={false}
  loadFunc={[Function]}
/>
`;

exports[`table change config is isFetch 1`] = `
<TableComponent
  array={Array []}
  hasMore={true}
  isError={true}
  loadFunc={[Function]}
/>
`;
